@@ -1922,39 +1922,38 @@ SCIP_RETCODE SCIPincludeConshdlrSuperindicator(
    SCIP_CALL( SCIPsetConshdlrTrans(scip, conshdlr, consTransSuperindicator) );
    SCIP_CALL( SCIPsetConshdlrEnforelax(scip, conshdlr, consEnforelaxSuperindicator) );
 
-   /* includes or updates the default dialog menus in SCIP */
-   SCIP_CALL( SCIPincludeDialogDefault(scip) );
-
+   /* add dialogs if they are not disabled */
    root = SCIPgetRootDialog(scip);
-   assert(root != NULL);
-
-   /* find change menu */
-   if( !SCIPdialogHasEntry(root, "change") )
+   if( root != NULL )
    {
-      SCIP_CALL( SCIPincludeDialog(scip, &changemenu,
+      /* find change menu */
+      if( !SCIPdialogHasEntry(root, "change") )
+      {
+         SCIP_CALL( SCIPincludeDialog(scip, &changemenu,
             NULL,
             SCIPdialogExecMenu, NULL, NULL,
             "change", "change the problem", TRUE, NULL) );
-      SCIP_CALL( SCIPaddDialogEntry(scip, root, changemenu) );
-      SCIP_CALL( SCIPreleaseDialog(scip, &changemenu) );
-   }
+         SCIP_CALL( SCIPaddDialogEntry(scip, root, changemenu) );
+         SCIP_CALL( SCIPreleaseDialog(scip, &changemenu) );
+      }
 
-   if( SCIPdialogFindEntry(root, "change", &changemenu) != 1 )
-   {
-      SCIPerrorMessage("change sub menu not found\n");
-      return SCIP_PLUGINNOTFOUND;
-   }
+      if( SCIPdialogFindEntry(root, "change", &changemenu) != 1 )
+      {
+         SCIPerrorMessage("change sub menu not found\n");
+         return SCIP_PLUGINNOTFOUND;
+      }
 
-   /* add minuc dialog */
-   if( !SCIPdialogHasEntry(changemenu, "minuc") )
-   {
-      SCIP_CALL( SCIPincludeDialog(scip, &dialog,
+      /* add minuc dialog */
+      if( !SCIPdialogHasEntry(changemenu, "minuc") )
+      {
+         SCIP_CALL( SCIPincludeDialog(scip, &dialog,
             NULL,
             SCIPdialogExecChangeMinUC, NULL, NULL,
             "minuc", "transforms the current problem into a MinUC problem minimizing the number of unsatisfied constraints",
             FALSE, NULL) );
-      SCIP_CALL( SCIPaddDialogEntry(scip, changemenu, dialog) );
-      SCIP_CALL( SCIPreleaseDialog(scip, &dialog) );
+         SCIP_CALL( SCIPaddDialogEntry(scip, changemenu, dialog) );
+         SCIP_CALL( SCIPreleaseDialog(scip, &dialog) );
+      }
    }
 
    /* add constraint handler parameters */
